journals 1 and 2, worksheet 1

--- a/journal.html
+++ b/journal.html
@@ -14,12 +14,12 @@
   <main>
 	<section>
 	<h4> WEEK 1: SEPT 8th </h4>
-	<article> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</article>
+	<article> Although I wasn't yet enrolled in the course, I realized the value of this subject because it wasn't the management course that I had initially signed up for and attended instead. Thank the heavens.</article>
 	</section>
 
 	<section>
 	<h4> WEEK 2: SEPT 15th </h4>
-	<article> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.	<article> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</article>
+	<article> The last time I used Python for anything was about two or three years ago, but I surprisingly hadn't forgotten much. With the syntax being relatively fresh and having learned JavaScript in the meantime, I was able to pick it back up quickly.</article>
 	</section>
 	
 	<section>
