--- a/journal.html
+++ b/journal.html
@@ -24,7 +24,7 @@
 	
 	<section>
 	<h4> WEEK 3: SEPT 22nd </h4>
-	<article> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</article>
+	<article> I've used dictionaries and web APIs in Python before, so this week was pretty straightforward for me. I was able to complete the exercise without much difficulty, and it refreshed my memory on how to work with JSON data.</article>
 	</section>
 		<section>
 	<h4> WEEK 4: SEPT 29th </h4>
