flask lecture and journal 4

--- a/journal.html
+++ b/journal.html
@@ -28,7 +28,7 @@
 	</section>
 		<section>
 	<h4> WEEK 4: SEPT 29th </h4>
-	<article> ... </article>
+	<article> Flask reminded me of the hellscape that was trying to figure out web hosting and deployment for some previous projects. I've never used Python for web development, so there was some new information that I learned about routing and templates. </article>
 	</section>
 </main>
   <!-- the footer div -->
