pre flask-2 journals

--- a/journal.html
+++ b/journal.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>**JOURNAL FOR CART 351**</title>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/journal.css">
-</head>
-<body>
-    <!-- the header div -->
-  <header>
-    <h2>**JOURNAL FOR CART 351**</h2>
-  <header>
-  <!-- the main div -->
-  <main>
-	<section>
-	<h4> WEEK 1: SEPT 8th </h4>
-	<article> Although I wasn't yet enrolled in the course, I realized the value of this subject because it wasn't the management course that I had initially signed up for and attended instead. Thank the heavens.</article>
-	</section>
 
-	<section>
-	<h4> WEEK 2: SEPT 15th </h4>
-	<article> The last time I used Python for anything was about two or three years ago, but I surprisingly hadn't forgotten much. With the syntax being relatively fresh and having learned JavaScript in the meantime, I was able to pick it back up quickly.</article>
-	</section>
-	
-	<section>
-	<h4> WEEK 3: SEPT 22nd </h4>
-	<article> I've used dictionaries and web APIs in Python before, so this week was pretty straightforward for me. I was able to complete the exercise without much difficulty, and it refreshed my memory on how to work with JSON data.</article>
-	</section>
-		<section>
-	<h4> WEEK 4: SEPT 29th </h4>
-	<article> Flask reminded me of the hellscape that was trying to figure out web hosting and deployment for some previous projects. I've never used Python for web development, so there was some new information that I learned about routing and templates. </article>
-	</section>
-</main>
-  <!-- the footer div -->
-<footer>
-<p>This page is <strong>merely</strong> a template page. It contains only an <em> indication </em> for the content expected. You are FREE (and <strong>should</strong>) rewrite the markup, add a layout (css), images, styling, some character, etc ...</p>
-</footer>
+<head>
+	<title>**JOURNAL FOR CART 351**</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" type="text/css" href="css/journal.css">
+</head>
+
+<body>
+	<!-- the header div -->
+	<header>
+		<h2>**JOURNAL FOR CART 351**</h2>
+		<header>
+			<!-- the main div -->
+			<main>
+				<section>
+					<h4> WEEK 1: SEPT 8th </h4>
+					<article> Although I wasn't yet enrolled in the course, I realized the value of this subject because
+						it wasn't the management course that I had initially signed up for and attended instead. Thank
+						the heavens.</article>
+				</section>
+
+				<section>
+					<h4> WEEK 2: SEPT 15th </h4>
+					<article> The last time I used Python for anything was about two or three years ago, but I
+						surprisingly hadn't forgotten much. With the syntax being relatively fresh and having learned
+						JavaScript in the meantime, I was able to pick it back up quickly.</article>
+				</section>
+
+				<section>
+					<h4> WEEK 3: SEPT 22nd </h4>
+					<article> I've used dictionaries and web APIs in Python before, so this week was pretty
+						straightforward for me. I was able to complete the exercise without much difficulty, and it
+						refreshed my memory on how to work with JSON data.</article>
+				</section>
+				<section>
+					<h4> WEEK 4: SEPT 29th </h4>
+					<article> Flask reminded me of the hellscape that was trying to figure out web hosting and
+						deployment for some previous projects. I've never used Python for web development, so there was
+						some new information that I learned about routing and templates. </article>
+				</section>
+				<section>
+					<h4> WEEK 5: OCT 6th </h4>
+					<article> Strike... no class... no flask...</article>
+				</section>
+				<section>
+					<h4> WEEK 6: OCT 13th </h4>
+					<article> Reading week... still no class... still no flask...</article>
+				</section>
+				<section>
+					<h4> WEEK 7: OCT 20th </h4>
+					<article> 
+					</article>
+				</section>
+
+			</main>
+			<!-- the footer div -->
+			<footer>
+				<p>This page is <strong>merely</strong> a template page. It contains only an <em> indication </em> for
+					the content expected. You are FREE (and <strong>should</strong>) rewrite the markup, add a layout
+					(css), images, styling, some character, etc ...</p>
+			</footer>
 </body>
+
 </html>
