--- a/journal.html
+++ b/journal.html
@@ -50,7 +50,9 @@
 				</section>
 				<section>
 					<h4> WEEK 7: OCT 20th </h4>
-					<article> 
+					<article> Maybe Flask isn't my best friend, and that's ok! It might have just been because I haven't
+						had class in three weeks but I'm not feeling so confident about it right now. It's not too
+						dissimilar from other tools I've used so I was probably just using half my brain during class.
 					</article>
 				</section>
 
