--- a/journal.html
+++ b/journal.html
@@ -54,6 +54,12 @@
 						had class in three weeks but I'm not feeling so confident about it right now. It's not too
 						dissimilar from other tools I've used so I was probably just using half my brain during class.
 					</article>
+					<h4> WEEK 8: OCT 27th </h4>
+					<article> Big news: Flask and I have worked it out on the remix. Is jinja intuitive to me? No. But
+						it works, and I can understand how to use it. I'm excited to work on my second project with it!
+						I'm thinking about doing something more advanced with APIs and finding some library for
+						visualization.
+					</article>
 				</section>
 
 			</main>
