--- a/journal.html
+++ b/journal.html
@@ -60,6 +60,10 @@
 						I'm thinking about doing something more advanced with APIs and finding some library for
 						visualization.
 					</article>
+					<h4> WEEK 9: NOV 3rd </h4>
+					<article></article>
+					<h4> WEEK 10: NOV 10th </h4>
+					<article></article>
 				</section>
 
 			</main>
