--- a/journal.html
+++ b/journal.html
@@ -61,9 +61,13 @@
 						visualization.
 					</article>
 					<h4> WEEK 9: NOV 3rd </h4>
-					<article></article>
+					<article> I'm pretty much settled in with Flask. I may have rushed the exercise today even though I
+						didn't have to but at least that's one thing I don't have to do later. I'm not lazy I'm just
+						stressed I swear</article>
 					<h4> WEEK 10: NOV 10th </h4>
-					<article></article>
+					<article> MongoDB is a stupid name and a stupid system. Why does everything need to have thirty
+						different submenus. I miss Firebase, at least I could see what I was doing without being
+						visually assaulted by the interface.</article>
 				</section>
 
 			</main>
