--- a/journal.html
+++ b/journal.html
@@ -68,6 +68,11 @@
 					<article> MongoDB is a stupid name and a stupid system. Why does everything need to have thirty
 						different submenus. I miss Firebase, at least I could see what I was doing without being
 						visually assaulted by the interface.</article>
+					<h4> WEEK 11: NOV 17th </h4>
+					<article> I'm still a MongoDB hater, so I'm glad we moved on to websockets. I can see how this could
+						be used for some really cool real-time projects, and I'm excited to try it out myself. It was
+						also really fun to see some other projects, especially since I need to start looking for
+						inspiration for the next one.</article>
 				</section>
 
 			</main>
