website index page styling

--- a/351-website/index.html
+++ b/351-website/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael's CART 351 Files</title>
+    <title>Michael's CART 351 Library</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Michael's CART 351 Files</h1>
-    <ul class="file-list">
-        <li><a href="journal.html">Journal</a></li>
-        <li><a href="exercises.html">Exercises</a></li>
-        <li><a href="projects.html">Projects</a></li>
-    </ul>
-    
+    <main class="bookshelf-scene">
+        <h1 class="library-title">Michael's CART351 Archives</h1>
+        <div class="bookshelf">
+            <a href="journal.html" class="book-spine book-journal">
+                <span class="spine-text">Journal</span>
+            </a>
+            <a href="exercises.html" class="book-spine book-exercises">
+                <span class="spine-text">Exercises</span>
+            </a>
+            <a href="projects.html" class="book-spine book-projects">
+                <span class="spine-text">Projects</span>
+            </a>
+        </div>
+        <div class="shelf-plank"></div>
+    </main>
 </body>
 </html>
