--- a/351-website/journal.html
+++ b/351-website/journal.html
@@ -12,7 +12,7 @@
             <div class="journal-cover journal-cover--front">
                 <span class="journal-emboss">Michael's CART 351 Journal</span>
             </div>
-            <div class="journal-pages" role="region" >
+            <div class="journal-pages">
                 <div class="journal-page" data-page="1"></div>
                 <div class="journal-page" data-page="2"></div>
                 <div class="journal-page" data-page="3"></div>
