website exercises and projects content, move to root for github pages

--- a/exercises.html
+++ b/exercises.html
@@ -21,19 +21,16 @@
                     <div class="page-back"></div>
                 </div>
                 <div class="journal-page" data-page="1">
-                    <div class="page-front"></div>
-                    <div class="page-back"></div>
-                </div>
-                <div class="journal-page" data-page="2">
-                    <div class="page-front"></div>
-                    <div class="page-back"></div>
-                </div>
-                <div class="journal-page" data-page="3">
-                    <div class="page-front"></div>
-                    <div class="page-back"></div>
-                </div>
-                <div class="journal-page" data-page="4">
-                    <div class="page-front"></div>
+                    <div class="page-front">
+                        <h2>Exercises</h2>
+                        <div class="project-links">
+                            <a href="https://github.com/mvlamis/cart351/tree/main/exercise-one" target="_blank" class="project-link">Exercise 1: Python APIs →</a>
+                            <a href="https://github.com/mvlamis/cart351/tree/main/michael-vlamis_exercise-two" target="_blank" class="project-link">Exercise 2: Flask →</a>
+                            <a href="https://github.com/mvlamis/cart351/tree/main/michael-vlamis_exercise-three" target="_blank" class="project-link">Exercise 3: Flask and Fetch →</a>
+                            <a href="https://github.com/mvlamis/cart351/blob/main/exercise-four.pdf" target="_blank" class="project-link">Exercise 4: Peer Responses →</a>
+                            <a href="https://github.com/mvlamis/cart351/tree/main/exercise-five" target="_blank" class="project-link">Exercise 5: MongoDB →</a>
+                        </div>
+                    </div>
                     <div class="page-back"></div>
                 </div>
             </div>
