--- a/index.html
+++ b/index.html
@@ -1,54 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>**TEMPLATE CART 351 PAGE**</title>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Michael's CART 351 Library</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- the header div -->
-  <header>
-    <h2>**TEMPLATE CART 351 PAGE**</h2>
-    <h3> Sabine Rosenberg </h3>
-    <h4> Description: </h4>
-      <h4> My github repo for CART 351 <a href = "#">link</a></h4>
-    <p>Below is a list of links to the exercises and projects.</p>
-  <header>
-  <!-- the main div -->
-  <main>
-  
-    <p> <a href = "journal.html">LINK TO JOURNAL</a> </p>
-  
-  <p> EXERCISES </p>
-    <ul>
-          <li><a href="#"> link to exercise 1:live:</a></li>
-          <li><a href="#"> link to exercise 2:live:</a></li>
-          <li><a href="#"> link to exercise xx :live:</a></li>
-      </ul>
-       <p> PROJECT I</p>
-      <ul>
-        <li><a href="#"> Project I download</a> </li>
-        <li><a href="#"> Project I :live:</a></li>
-        <li><a href="#"> Project I documentation:</a></li>
-      </ul>
-      <p> PROJECT II </p>
-      <ul>
-        <li><a href="#"> Project I download</a> </li>
-        <li><a href="#"> Project I :live:</a></li>
-        <li><a href="#"> Project I documentation:</a></li>
-      </ul>
-      <p> PROJECT III</p>
-      <ul>
-        <li><a href="#"> Project I download</a> </li>
-        <li><a href="#"> Project I :live:</a></li>
-        <li><a href="#"> Project I documentation:</a></li>
-      </ul>
-   
-
-</main>
-  <!-- the footer div -->
-<footer>
-<p>This page is <strong>merely</strong> a template page. It contains only an <em> indication </em> for the content expected. You are FREE (and <strong>should</strong>) rewrite the markup, add a layout (css), images, styling, some character, etc ...</p>
-</footer>
+    <main class="bookshelf-scene">
+        <h1 class="library-title">Michael's CART351 Archives</h1>
+        <div class="bookshelf">
+            <a href="journal.html" class="book-spine book-journal">
+                <span class="spine-text">Journal</span>
+            </a>
+            <a href="exercises.html" class="book-spine book-exercises">
+                <span class="spine-text">Exercises</span>
+            </a>
+            <a href="projects.html" class="book-spine book-projects">
+                <span class="spine-text">Projects</span>
+            </a>
+        </div>
+    </main>
 </body>
 </html>
