--- a/journal.html
+++ b/journal.html
@@ -1,87 +1,105 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<title>**JOURNAL FOR CART 351**</title>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="css/journal.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Michael's Journal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the header div -->
-	<header>
-		<h2>**JOURNAL FOR CART 351**</h2>
-		<header>
-			<!-- the main div -->
-			<main>
-				<section>
-					<h4> WEEK 1: SEPT 8th </h4>
-					<article> Although I wasn't yet enrolled in the course, I realized the value of this subject because
-						it wasn't the management course that I had initially signed up for and attended instead. Thank
-						the heavens.</article>
-				</section>
-
-				<section>
-					<h4> WEEK 2: SEPT 15th </h4>
-					<article> The last time I used Python for anything was about two or three years ago, but I
-						surprisingly hadn't forgotten much. With the syntax being relatively fresh and having learned
-						JavaScript in the meantime, I was able to pick it back up quickly.</article>
-				</section>
-
-				<section>
-					<h4> WEEK 3: SEPT 22nd </h4>
-					<article> I've used dictionaries and web APIs in Python before, so this week was pretty
-						straightforward for me. I was able to complete the exercise without much difficulty, and it
-						refreshed my memory on how to work with JSON data.</article>
-				</section>
-				<section>
-					<h4> WEEK 4: SEPT 29th </h4>
-					<article> Flask reminded me of the hellscape that was trying to figure out web hosting and
-						deployment for some previous projects. I've never used Python for web development, so there was
-						some new information that I learned about routing and templates. </article>
-				</section>
-				<section>
-					<h4> WEEK 5: OCT 6th </h4>
-					<article> Strike... no class... no flask...</article>
-				</section>
-				<section>
-					<h4> WEEK 6: OCT 13th </h4>
-					<article> Reading week... still no class... still no flask...</article>
-				</section>
-				<section>
-					<h4> WEEK 7: OCT 20th </h4>
-					<article> Maybe Flask isn't my best friend, and that's ok! It might have just been because I haven't
-						had class in three weeks but I'm not feeling so confident about it right now. It's not too
-						dissimilar from other tools I've used so I was probably just using half my brain during class.
-					</article>
-					<h4> WEEK 8: OCT 27th </h4>
-					<article> Big news: Flask and I have worked it out on the remix. Is jinja intuitive to me? No. But
-						it works, and I can understand how to use it. I'm excited to work on my second project with it!
-						I'm thinking about doing something more advanced with APIs and finding some library for
-						visualization.
-					</article>
-					<h4> WEEK 9: NOV 3rd </h4>
-					<article> I'm pretty much settled in with Flask. I may have rushed the exercise today even though I
-						didn't have to but at least that's one thing I don't have to do later. I'm not lazy I'm just
-						stressed I swear</article>
-					<h4> WEEK 10: NOV 10th </h4>
-					<article> MongoDB is a stupid name and a stupid system. Why does everything need to have thirty
-						different submenus. I miss Firebase, at least I could see what I was doing without being
-						visually assaulted by the interface.</article>
-					<h4> WEEK 11: NOV 17th </h4>
-					<article> I'm still a MongoDB hater, so I'm glad we moved on to websockets. I can see how this could
-						be used for some really cool real-time projects, and I'm excited to try it out myself. It was
-						also really fun to see some other projects, especially since I need to start looking for
-						inspiration for the next one.</article>
-				</section>
-
-			</main>
-			<!-- the footer div -->
-			<footer>
-				<p>This page is <strong>merely</strong> a template page. It contains only an <em> indication </em> for
-					the content expected. You are FREE (and <strong>should</strong>) rewrite the markup, add a layout
-					(css), images, styling, some character, etc ...</p>
-			</footer>
+    <main class="journal-scene">
+        <div class="journal">
+            <div class="journal-cover journal-cover--front">
+                <span class="journal-emboss">Journal</span>
+                <span class="journal-author">Michael Vlamis</span>
+            </div>
+            <div class="journal-pages">
+                <div class="journal-page">
+                    <div class="page-front"></div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 1: Sept 8th</h2>
+                        <p>Although I wasn't yet enrolled in the course, I realized the value of this subject because it wasn't the management course that I had initially signed up for and attended instead. Thank the heavens.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 2: Sept 15th</h2>
+                        <p>The last time I used Python for anything was about two or three years ago, but I surprisingly hadn't forgotten much. With the syntax being relatively fresh and having learned JavaScript in the meantime, I was able to pick it back up quickly.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 3: Sept 22nd</h2>
+                        <p>I've used dictionaries and web APIs in Python before, so this week was pretty straightforward for me. I was able to complete the exercise without much difficulty, and it refreshed my memory on how to work with JSON data.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 4: Sept 29th</h2>
+                        <p>Flask reminded me of the hellscape that was trying to figure out web hosting and deployment for some previous projects. I've never used Python for web development, so there was some new information that I learned about routing and templates.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 5: Oct 6th</h2>
+                        <p>Strike... no class... no flask...</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 6: Oct 13th</h2>
+                        <p>Reading week... still no class... still no flask...</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 7: Oct 20th</h2>
+                        <p>Maybe Flask isn't my best friend, and that's ok! It might have just been because I haven't had class in three weeks but I'm not feeling so confident about it right now. It's not too dissimilar from other tools I've used so I was probably just using half my brain during class.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 8: Oct 27th</h2>
+                        <p>Big news: Flask and I have worked it out on the remix. Is jinja intuitive to me? No. But it works, and I can understand how to use it. I'm excited to work on my second project with it! I'm thinking about doing something more advanced with APIs and finding some library for visualization.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 9: Nov 3rd</h2>
+                        <p>I'm pretty much settled in with Flask. I may have rushed the exercise today even though I didn't have to but at least that's one thing I don't have to do later. I'm not lazy I'm just stressed I swear</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 10: Nov 10th</h2>
+                        <p>MongoDB is a stupid name and a stupid system. Why does everything need to have thirty different submenus. I miss Firebase, at least I could see what I was doing without being visually assaulted by the interface.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+                <div class="journal-page">
+                    <div class="page-front">
+                        <h2>Week 11: Nov 17th</h2>
+                        <p>I'm still a MongoDB hater, so I'm glad we moved on to websockets. I can see how this could be used for some really cool real-time projects, and I'm excited to try it out myself. It was also really fun to see some other projects, especially since I need to start looking for inspiration for the next one.</p>
+                    </div>
+                    <div class="page-back"></div>
+                </div>
+            </div>
+            <div class="journal-cover journal-cover--back"></div>
+        </div>
+    </main>
+    <a href="index.html" class="back-link">← Back to Library</a>
+    <script src="script.js" type="module"></script>
 </body>
-
 </html>
